# cr

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  generate_pool_descriptions.py
cr-app/: Cargo.toml
cr-app/src/: error.rs  lib.rs  queries.rs
cr-app/src/services/: mod.rs  video_publishing.rs
cr-domain/: Cargo.toml
cr-domain/src/: coordinates.rs  dto.rs  error.rs  id.rs  intentional_negative_test_for_ci_wake.rs  lib.rs  repository.rs  slug.rs
cr-domain/src/entities/: district.rs  mod.rs  municipality.rs  orp.rs  region.rs
cr-infra/: Cargo.toml
cr-infra/migrations/: 20250211_001_create_territorial_tables.sql  20260324_002_add_lat_lon_columns.sql  20260325_003_add_municipality_wiki_data.sql  20260326_004_add_region_wiki_data.sql  20260327_005_rename_image_url_to_ext.sql  20260327_006_add_wikipedia_raw_table.sql  20260329_007_create_landmarks_table.sql  20260330_008_create_audiobooks_table.sql  20260331_009_add_cerni_baroni.sql  20260400_009a_add_landmark_npu_columns.sql  20260401_010_landmarks_orp_unique_slug.sql  20260402_011_create_pools_table.sql  20260403_012_create_photo_metadata.sql  20260404_013_create_municipality_photos.sql  20260405_014_add_orp_map_label.sql  20260406_015_add_landmark_npu_description.sql  20260407_016_create_landmark_photos.sql  20260408_017_add_region_hero_photo_r2_key.sql  20260409_018_add_region_hero_municipality.sql  20260410_019_fix_jihocesky_hero.sql  20260411_020_add_orp_description.sql  20260412_021_create_videos.sql  20260413_022_videos_unique_by_container.sql  20260415_024_videos_last_accessed_at.sql  20260416_025_videos_resolution.sql  20260417_026_add_sktorrent_columns.sql  20260418_027_create_sktorrent_videos.sql  20260419_028_create_films_genres.sql  20260420_029_create_series_episodes.sql  20260421_030_episode_metadata.sql  20260422_031_episodes_prehrajto.sql  20260423_032_films_prehrajto.sql  20260424_033_series_tmdb_overview_en.sql  20260425_034_auto_import_tables.sql  20260426_035_films_generated_description.sql  20260427_036_sktorrent_added_at.sql  20260428_037_episodes_generated_description.sql  20260429_038_episodes_overview_en.sql  20260430_040_episode_slug_series_old_slug.sql  20260501_041_create_tv_shows_episodes.sql  (+39 more)
cr-infra/src/: lib.rs
cr-infra/src/r2/: mod.rs
cr-infra/src/repositories/: landmark.rs  mod.rs  municipality.rs  orp.rs  photo.rs  pool.rs  region.rs  video_library.rs
cr-infra/src/streamtape/: mod.rs
cr-infra/src/video/: mod.rs  transcode.rs
cr-infra/src/video/extractors/: instagram.rs  mod.rs  nova.rs  seznam.rs  ytdlp.rs
cr-infra/src/video_library/: mod.rs
cr-web/: Cargo.toml
cr-web/src/: cache.rs  config.rs  error.rs  handlers.rs  img_proxy.rs  lib.rs  main.rs  state.rs
cr-web/src/handlers/: admin_backups.rs  admin_cache.rs  admin_dashboard.rs  admin_import.rs  admin_prehrajto.rs  admin_test_sledujteto.rs  audiobooks.rs  cover_proxy.rs  csfd_watchlist.rs  download_video.rs  films.rs  filmy_serialy.rs  filmy_serialy_sledujteto.rs  geojson.rs  landmarks.rs  mod.rs  movies_api.rs  municipalities.rs  orp.rs  pools.rs  regions.rs  series.rs  tv_porady.rs  video_api.rs  video_sources.rs  voices.rs
cr-web/src/handlers/movies_api/: cz_proxy.rs  mod.rs  prehrajto.rs  prehrajto_hints.rs  prehrajto_resolver.rs  sledujteto.rs  stream.rs  subtitles.rs  thumbnail.rs
cr-web/src/handlers/video_api/: cleanup.rs  download.rs  library.rs  mod.rs  thumbnail.rs
cr-web/static/css/: index.css  lightbox.css  map.css
cr-web/static/geojson/: kraje.geojson
cr-web/static/geojson/regions/: 3018.geojson  3026.geojson  3034.geojson  3042.geojson  3051.geojson  3069.geojson  3077.geojson  3085.geojson  3093.geojson  3107.geojson  3115.geojson  3123.geojson  3131.geojson  3140.geojson
cr-web/static/img/: czech-map.svg.html
cr-web/static/js/: lightbox.js
cr-web/templates/: 404.html  500.html  admin_backups.html  admin_cache.html  admin_dashboard.html  admin_import_detail.html  admin_import_failures.html  admin_import_list.html  admin_import_summary.html  admin_prehrajto_unmatched.html  admin_test_sledujteto.html  audiobooks.html  base.html  download_video.html  episode_detail.html  film_detail.html  films_list.html  filmy_serialy.html  filmy_serialy_sledujteto.html  homepage.html  landmark_detail.html  landmarks_index.html  landmarks_list.html  municipality.html  orp.html  pool_detail.html  pools_hub.html  pools_list.html  prevod_textu_na_hlas.html  region.html  series_detail.html  series_list.html  tv_epizoda_detail.html  tv_porad_detail.html  tv_porady_list.html  voices.html
cr-web/templates/includes/: map_cr.html  map_hlavni_mesto_praha.html  map_jihocesky_kraj.html  map_jihomoravsky_kraj.html  map_karlovarsky_kraj.html  map_kraj_vysocina.html  map_kralovehradecky_kraj.html  map_liberecky_kraj.html  map_moravskoslezsky_kraj.html  map_olomoucky_kraj.html  map_pardubicky_kraj.html  map_plzensky_kraj.html  map_stredocesky_kraj.html  map_ustecky_kraj.html  map_zlinsky_kraj.html
docs/: BLUEPRINT.md  BUSINESS_MODEL.md  DATA_MODEL.md  DEVELOPMENT.md  MODULES.md  UI_WIREFRAMES.md  URL_STRUCTURE.md  VISION.md  sktorrent-cdn-stability.md
scripts/: PREHRAJTO_SYNC_README.md  auto-import.py  backfill-film-cast.py  backfill-person-photos.py  backfill-prehrajto-from-search.py  backfill-raw-en-descriptions.py  backfill-series-cast.py  backfill-sktorrent-langs.py  backfill-sledujteto-covers.py  backfill-sledujteto-runtime.py  backfill-tmdb-imdb-ids.py  backfill-tmdb-poster-paths.py  backfill-tmdb-ratings.py  backfill-video-sources.py  backfill_films_runtime.py  backfill_lang_class_537.py  backfill_prehrajto_gemma.py  backup-db.sh  bootstrap-pat-a-mat-series.py  classify-tv-porady.py  cron-prehrajto-sync.sh  dedup-tv-porady-matches.py  deploy.sh  extract-stream.py  extract_video.py  find-sktorrent-new-series.py  fix-exotic-film-titles.py  generate-episode-descriptions.py  generate-film-descriptions-prehrajto.py  generate-tv-show-descriptions.py  import-prehrajto-new-films.py  import-prehrajto-series.py  import-prehrajto-tmdb-as-film.py  (+25 more)
(+96 files in other folders)
