[package]
name = "cr-infra"
description = "Infrastructure layer: SQLx persistence, CSV import, external integrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cr-domain = { workspace = true }
cr-app = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "import-csv"
path = "src/bin/import_csv.rs"
