[package]
name = "cr-infra"
description = "Infrastructure layer: SQLx persistence, CSV import, external integrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cr-domain = { workspace = true }
cr-app = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
bytes = "1"
sha2 = "0.10"
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "gzip", "multipart"], default-features = false }
base64 = { workspace = true }
urlencoding = { workspace = true }

[[bin]]
name = "import-csv"
path = "src/bin/import_csv.rs"
