[package]
name = "cr-web"
description = "Presentation layer: Axum server, Askama SSR templates, routes, and DTOs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cr-domain = { workspace = true }
cr-app = { workspace = true }
cr-infra = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
askama = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
ammonia = "4.1.2"
urlencoding = "2.1.3"
